spark-standalone/spark-worker-deployment.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: spark-worker-controller
  namespace: sia-team
spec:
  replicas: 2
  selector:
    matchLabels:
      component: spark-worker
  template:
    metadata:
      labels:
        component: spark-worker
    spec:
      imagePullSecrets:
        - name: dockerhub-secret
      serviceAccountName: spark-standalone-sa
      containers:
        - name: spark-worker
          image: bitnami/spark:3.5.1
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: 500m
              memory: 1.5Gi
            limits:
              cpu: 1000m
              memory: 2Gi
