spark-standalone/spark-master-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: spark-master
  namespace: sia-team
spec:
  type: NodePort
  selector:
    component: spark-master
  ports:
    - name: spark-master
      protocol: TCP
      port: 7077
      targetPort: 7077
      nodePort: 30077
    - name: spark-ui
      protocol: TCP
      port: 8080
      targetPort: 8080
