spark-standalone/spark-workers-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: spark-worker-controller-0
  namespace: sia-team
spec:
  selector:
    statefulset.kubernetes.io/pod-name: spark-worker-controller-0
  ports:
    - port: 8081
      targetPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: spark-worker-controller-1
  namespace: sia-team
spec:
  selector:
    statefulset.kubernetes.io/pod-name: spark-worker-controller-1
  ports:
    - port: 8081
      targetPort: 8081
