spark-standalone/spark-maskter-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spark-master-ui
  namespace: sia-team
  annotations:
    kubernetes.io/ingress.class: "openshift-default"
    route.openshift.io/termination: "edge"
spec:
  rules:
    - host: spark-master-ui.apps.scbocpuat.scb.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spark-master
                port:
                  number: 8080
